<resources>
    <string name="app_name">Adma</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="title_activity_otp">otp</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity">This is our Main Activity</string>
    <string name="another_activity">This is our Another Activity</string>
    <string name="title_activity_navi">navi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="title_activity_nav_darwer">NavDarwerActivity</string>
    <string name="faqnote">
        "Note:All details pertaining to any of the programmes (fee structure, duration,"
        "programme structure/curriculum, etc.) are present under the respective programmes,"
        "under the UG/PG Programmes section on the main menu."
    </string>
    <string name="faqanswer1">
        "‘Adma Mater’ provides a way for candidates to apply for admission to the FRESHMAN YEAR "
        "(commonly called FIRST YEAR) of any one of Magnum Technology College’s programmes and aids "
        "the candidate in this procedure. The app also allows him/her to find out information "
        "regarding the college and its different undergraduate and post graduate programmes.\n\n"

        "‘Adma Mater’ is basically the equivalent of having a digital assistant constantly by "
        "your side, who not only aids you in gaining admission but also receives timely updates "
        "from the college itself and notifies you of them. PLEASE NOTE that if you are using "
        "this app on your phone, you need not go out of your house for any part of the admission "
        "process – except for giving the entrance exam (you shall be notified of your exam "
        "center via the app itself through an electronic hall ticket, and you shall have to "
        "report there before the time specified in the ticket at the exam date), for the group "
        "discussion and personal interview, which happen on the same date (of which you shall "
        "be notified via the app, but you shall have to report to the college campus in order "
        "to be interviewed), and for the fee payment, in case you get selected (of which you "
        "shall also be notified via the app).\n\n"

    </string>
    <string name="faqanswer2">
        "In the unfortunate event of your phone getting stolen or misplaced, we do not want your "
        "personal information (including sensitive details like where you live, your family’s "
        "annual income, etc.) to fall in the hands of anyone who should not possess such "
        "information. The compulsory sign in feature ensures that this doesn’t happen, for example, "
        "if someone like a thief has your phone and even knows the unlock pattern/passcode, he/she "
        "may not know the password to your Google account, preventing him from gaining your "
        "information.\n\n"
    </string>
    <string name="faqanswer3">
        "You should choose this app over the traditional way for a number of reasons. These include - \n\n"
        "a) Automation – The app takes over your and relieves you of most responsibilities "
        "relating to freshers’ admission. Automation matters a lot because this results in ease "
        "and relaxation for the user; moreover, machines don’t make the same mistakes humans do, "
        "indicating greater accuracy. \n\n"
        "b) Security – As explained above in FAQ no. 2, the app is a more secure alternative as well.\n\n"
        "c) Greater transparency – ‘Adma Mater’ also brings greater transparency in the admission "
        "process, as you see first-hand EXACTLY how the admission procedure works. The app will "
        "therefore be as honest and thorough in explaining the admission process to you as "
        "perhaps an electronic brochure of the college – except, the app is more user friendly. \n\n"
        "d) Saving overhead costs - like the cost of transportation, purchasing the form from "
        "the college, etc.\n\n"
    </string>
    <string name="faqanswer4">
        "It’s simple; all you have to do is register with your Gmail ID and enter certain "
        "required details. Once registered, you can use ALL features of this app. Navigate "
        "through the self explanatory menu options\n\n"
    </string>
    <string name="faqanswer5">
        "Tap on the ‘Programmes’ section on the main menu, then tap on the name of the programme "
        "you desire to gain admission to. Follow the simple, self-explanatory steps to get "
        "yourself registered for the entrance exam.\n\n"
    </string>
    <string name="faqanswer6">
        "Every student of this institute shall abide by the rules of this institute, which may be"
        "updated from time to time. Admissions are subject to eligibility clearance from Magnum"
        "Technology College’s admission department and will be confirmed only after payment of"
        "prescribed fees. STUDENTS MAY CHOOSE TO APPLY FOR MULTIPLE PROGRAMMES, provided they are"
        "eligible for application. However, since a student can only pursue one degree from MTC at"
        "a time, if such a student gains admission to multiple programmes, he/she may choose any"
        "of the programmes and take admission in it. Admissions will be cancelled in case of: \n\n"
        "a) Not submitting the required documents in time. Submission of fake or incorrect documents\n\n"
        "b) Failing to fulfil required eligibility criteria of the respective programme\n\n"
        "c) Admissions sought by fraudulent means. Students carrying any backlog in the qualifying"
        "examination\n\n The refund rules are as follows – \n\n"
    </string>
    <string name="bgdesc">
        "MTC, an autonomous college, celebrates its 3rd year as one of the newest institutes "
        "in Maharashtra to offer high quality computer education. MTC is located in the heart "
        "of the city of Pune. Our location, our broad portfolio of academic IT programmes, "
        "our talented and diverse student body, and our dedicated faculty members work together "
        "to create an educational experience that is relevant, enriching, and unique. If you are "
        "considering IT education, we invite you to explore Magnum Technology College. MTC has "
        "an outstanding IT infrastructure available to support the programmes besides its "
        "excellent book collection and reference library. With an aim to provide industry "
        "ready professionals, MTC helps build IT leaders for the IT industry worldwide.\n\n"
        "MTC does not focus on studies alone – the college believes in your experience here "
        "being one you will truly cherish. With many student clubs like the DebSoc (Debating "
        "Society), the M.A.D. society (Music, Arts, and Dance society), the Sports Club, and "
        "many more, our institute opens multiple doors for extra - curricular activities. Also "
        "in place is an anti - ragging committee, composed of the college Director, Deputy "
        "Director, and other senior staff members, to ensure safety of the students. The college "
        "fest draws participants from all across the country, giving all an opportunity to "
        "showcase their talents.\n\n"
        "On extra - curriculars on the tech front, we have a software development lab specially "
        "dedicated to students who wish to take on extra projects and develop mobile "
        "applications besides their regular courses. MTC’s tech fest ‘Geekathon’ has been an "
        "event that attracts speakers and prominent figures in the world of computers, "
        "data, and cyber security to expose students to the real world developments in "
        "these respective fields.\n\n"
        "Our placement cell has quite impressively managed to bring MTC to the attention of "
        "firms like Google, Facebook, Yahoo, Infosys, ONGC, and TCS, to name a few, in a "
        "mere three years. With an average placement rate of 90% and an average package "
        "of 3 lakh INR Bachelors Degree students and for 6.5 lakh INR for Masters, the "
        "placement cell invites students pursuing bachelor’s and master’s degrees to try and "
        "get into some of the biggest firms in the country."
    </string>
    <string name="visiondesc">
        "Promoting international understanding through quality education."
    </string>
    <string name="missiondesc">
        " • to contribute towards knowledge generation and dissemination\n\n"
        "• to promote ethical and value-based learning\n\n"
        "• to foster the spirit of national development\n\n"
        "• to nurture creativity and encourage entrepreneurship\n\n"
        "• to promote health and wellness amongst students, staff and the community\n\n"
        "• to produce thought provoking leaders for the society\n\n"
    </string>
    <string name="mbaresv">
        "Within the sanctioned intake-\n\n"
        "Scheduled Castes – 15%\n\n"
        "Scheduled Tribes – 7.5%\n\n"
        "Differently Abled – 3%\n\n"
        "Serving/Retired Defense Personnel and their Children – 5%\n\n"
        "Over and above the sanctioned intake:\n\n"
		"Kashmiri Migrants – 3 Seats\n\n"
        "International Students – 15%"
    </string>
    <string name="mbaprereq">
        "Graduate in any discipline of any statutory/recognized university with the equivalent"
        "of a minimum of 50% marks (45% for SC/ST candidates)"
    </string>
    <string name="mbaobj">
        "To prepare students in applications of information technologies to deliver"
        "software solutions.\n\n"
        "The program focuses on –\n\n"
        "\t\t• Imparting training in latest technologies\n\n"
        "\t\t• Exposure to best business practices\n\n"
        "\t\t• Building team leadership qualities and management skills\n\n"
        "As programme relates to current professional practice and the work place, the students"
        "are best suited for entry-level positions as:\n\n"
        "\t\t• Application Programmer: Using latest methodologies, development tools, languages\n\n"
        "\t\t• Business Analyst: Business development, Pre-sales, Selection and Implementation"
        "of s/w solutions\n\n"
        "\t\t• Quality Analyst: Implementation of enterprise level quality models, design /"
        "implementation of s/w development processes, testing and technical documentation"
    </string>
    <string name="mbasop">
        "The assessment of the student for each examination is done, based on relative "
        "performance. Maximum Grade Point (GP) is 10 corresponding to O (Outstanding). For all "
        "courses, a student is required to pass both internal and external examination "
        "separately with a minimum Grade Point of 4 corresponding to Grade P. Students securing "
        "less than 40% absolute marks in each head of passing will be declared FAIL. The "
        "University awards a degree to the student who has achieved a minimum CGPA of 4 out "
        "of maximum of 10 CGPA for the programme."
    </string>
    <string name="mbasel">
        "MTCPGEE (Magnum Technology College Post Graduate Entrance Examination) at designated"
        "center, followed by GDPI (Group Discussion and Personal Interview) of shortlisted"
        "students at the college campus."
    </string>
    <string name="mbafee">
        "An amount of INR 45,000/- has to be paid for each academic year, within ONE MONTH of"
        "the announced date for fee payment. The entire programme shall hence cost INR 90,000/-"
    </string>
</resources>