<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.yuvap.adma.About"
    tools:showIn="@layout/activity_about">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.user.admamaterhome.about">

        <TextView
            android:id="@+id/bg"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_margin="@dimen/text_margin"
            android:text="Background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bgdesc"
            android:text="@string/bgdesc"
            android:layout_margin="@dimen/text_margin"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/vision"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_margin="@dimen/text_margin"
            android:text="Vision" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/visiondesc"
            android:text="@string/visiondesc"
            android:layout_margin="@dimen/text_margin"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/mission"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_margin="@dimen/text_margin"
            android:text="Mission" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/missiondesc"
            android:text="@string/missiondesc"
            android:layout_margin="@dimen/text_margin"
            android:textColor="@android:color/black"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
